<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/Black"
    android:layout_height="match_parent">

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/Start"
        android:background="@drawable/custom_button"
        android:id="@+id/start"
        android:layout_gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/load" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/version"
        android:textColor="@color/Yellow"
        android:textSize="25dp"
        android:id="@+id/textView"
        android:layout_marginRight="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/Load"
        android:id="@+id/load"
        android:background="@drawable/custom_button"
        android:layout_marginTop="57dp"
        android:layout_alignTop="@+id/start"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/Options"
        android:background="@drawable/custom_button"
        android:id="@+id/options"
        android:layout_below="@+id/load"
        android:layout_alignStart="@+id/load"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="@string/Exit"
        android:id="@+id/exit"
        android:layout_below="@+id/options"
        android:layout_alignStart="@+id/options"
        android:layout_marginTop="10dp" />
</RelativeLayout>