<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/Black"

    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_to"
        android:id="@+id/changeLanguage"
        android:textSize="30dp"
        android:background="@drawable/custom_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_your_location"
        android:background="@drawable/custom_button"
        android:id="@+id/btnForLocation"
        android:layout_below="@+id/changeLanguage"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/creatorImage"
        android:background="@color/Black"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnForLocation"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_here_to_see_the_creator"
        android:id="@+id/TextForCreator"
        android:textSize="30sp"
        android:textColor="@color/Yellow"
        android:layout_alignTop="@+id/creatorImage"
        android:layout_alignParentStart="true"
        android:layout_marginTop="55dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_last_saved_game"
        android:id="@+id/dateandTime"
        android:layout_below="@+id/changeLanguage"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/btnForLocation"
        android:background="@drawable/custom_button"
        android:onClick="checkTimeZone"
        android:layout_marginLeft="2dp" />

</RelativeLayout>